--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 path/file filter=lfs diff=lfs merge=lfs -text
+C:/Users/Santiago[[:space:]]Carrillo/Documents/GitHub/Webpage-for-Data-Visualization/data/Ventas_profit.csv filter=lfs diff=lfs merge=lfs -text
